--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
                 <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
                 <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
+
+            <br>
+
+            <div class="project hvr-wobble-horizontal">
+                <h2 class="hvr-wobble-horizontal">Mango</h2>
+                <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
+                <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+            </div>
+
+            <br>
+
+            <div class="project hvr-wobble-horizontal">
+                <h2 class="hvr-wobble-horizontal">Mango</h2>
+                <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
+                <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+            </div>
         </div>
     </div>
 
