--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -200px; margin-bottom: -5px; position: relative; z-index: 7">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -200px; margin-bottom: -5px; position: relative; z-index: 7" class="wave">
         <path fill="darkred" fill-opacity="1"
             d="M0,256L48,245.3C96,235,192,213,288,181.3C384,149,480,107,576,90.7C672,75,768,85,864,117.3C960,149,1056,203,1152,186.7C1248,171,1344,85,1392,42.7L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
