--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
             <div class="list-divider"></div>
             <h2 id="bio" style="font-size: 2em"></h2>
             <br><br>
-            <h3 class="menu" style="font-size: 2em;" ><a href="#about"><i class="fa fa-fw fa-user"></i> About</a> &emsp;•&emsp; <a href="#skills"><i class="fas fa-code"></i> Skills</a> &emsp;•&emsp; <a href="#projects"><i class="fas fa-briefcase"></i> Projects</a> &emsp;•&emsp; <a href="#socials"><i class="fas fa-share-alt"></i> Socials</a></h3>
+            <div class="menu">
+                <a class="menu-item" href="#about"><i class="fa fa-fw fa-user"></i> About</a>
+                <a class="menu-item" href="#skills"><i class="fas fa-code"></i> Skills</a>
+                <a class="menu-item" href="#projects"><i class="fas fa-briefcase"></i> Projects</a>
+                <a class="menu-item" href="#socials"><i class="fas fa-share-alt"></i> Socials</a>
+            </div>
         </div>
     </div>
 
