--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mazz • lounge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="output.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mazz' Lounge">
     <meta name="keywords" content="Mazz3015,ma15fo43,scratch,mazz,mazzml,mazz.ml,mazzfun,mazz.fun">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div class="firstslide">
+    <div class="header">
         <div class="container">
             <h1 style="font-size: 5em; margin: 0">Mazz</h1>
             <br>
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <div class="secondslide" id="about">
+    <div class="firstslide" id="about">
         <div class="container">
             <div data-aos="fade-up"><h1 style="font-size: 3em; margin-top: -60px;">About me</h1></div>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div class="thirdslide" id="skills">
+    <div class="secondslide" id="skills">
         <div class="container">
             <div data-aos="zoom-in"><h1 style="font-size: 3em; margin-top: -60px;">Skills</h1></div>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="secondslide" id="projects" style="z-index: 5;">
+    <div class="firstslide" id="projects" style="z-index: 5;">
         <div class="container">
             <h1 style="font-size: 3em; margin-top: -60px;">Projects</h1>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
@@ -86,35 +86,38 @@
             <br>
 
             <div class="project hvr-wobble-horizontal">
-                <h2 class="hvr-wobble-horizontal">Mango</h2>
+                <h2 class="hvr-wobble-horizontal">YT-DL</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
-                <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <img src="https://i.imgur.com/wFBec0d.png" alt="ytdl" style="width: 30%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. Link isn't available yet, sadly... <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
 
             <div class="project hvr-wobble-horizontal">
-                <h2 class="hvr-wobble-horizontal">Mango</h2>
+                <h2 class="hvr-wobble-horizontal">More projects coming soon...</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
-                <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> I've planned a lot of projects to do during this summer so stay tuned... <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
         </div>
     </div>
 
-    <div class="thirdslide" id="projects" style="z-index: 5;">
+    <div class="secondslide" id="projects" style="z-index: 5;">
         <div class="container">
             <h1 style="font-size: 3em; margin-top: -60px;">Contact</h1>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
-            <h2>not done yet</h2>
-            <br><br><br><br>
-            <h1>yeah</h1>
+            <h2>You can click on the following icons to contact me. Feel free to say hello, <span style="text-decoration: line-through;">I'll reply with a cute cat gif</span></h2>
+            <br>
+            <a href="https://twitter.com/mazzlmao"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
+            <a href="https://www.youtube.com/channel/UC3juzayWb3AHs4Kt1YGd5Iw?"><i class="icons fab fa-youtube" style="color: red;"></i></a>&emsp;
+            <a href="https://github.com/ma15fo43"><i class="icons fab fa-github" style="color: black;"></i> &emsp;
+            <i class="icons fab fa-reddit" style="color: #FF4500;"></i></a> &emsp;
+            <a href="mailto:ma15fo43@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
         </div>
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -200px; margin-bottom: -5px; position: relative; z-index: 7" class="wave">
-        <path fill="darkred" fill-opacity="1"
+        <path fill="#f4f4f4" fill-opacity="1"
             d="M0,256L48,245.3C96,235,192,213,288,181.3C384,149,480,107,576,90.7C672,75,768,85,864,117.3C960,149,1056,203,1152,186.7C1248,171,1344,85,1392,42.7L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
     </svg>
