wrong link, added gitignore

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <br>
             <a href="https://twitter.com/mazzlmao"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
             <a href="https://www.youtube.com/channel/UC3juzayWb3AHs4Kt1YGd5Iw?"><i class="icons fab fa-youtube" style="color: red;"></i></a>&emsp;
-            <a href="https://github.com/ma15fo43"><i class="icons fab fa-github" style="color: black;"></i> &emsp;
-            <i class="icons fab fa-reddit" style="color: #FF4500;"></i></a> &emsp;
+            <a href="https://github.com/ma15fo43"><i class="icons fab fa-github" style="color: black;"></i></a> &emsp;
+            <a href="https://reddit.com/user/mazz3015"><i class="icons fab fa-reddit" style="color: #FF4500;"></i></a> &emsp;
             <a href="mailto:ma15fo43@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
         </div>
     </div>
