made some changes

--- a/index.html
+++ b/index.html
@@ -86,18 +86,19 @@
             <br>
 
             <div class="project hvr-wobble-horizontal">
-                <h2 class="hvr-wobble-horizontal">YT-DL</h2>
+                <h2 class="hvr-wobble-horizontal">YouTube videos downloader</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
-                <img src="https://i.imgur.com/wFBec0d.png" alt="ytdl" style="width: 30%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. Link isn't available yet, sadly... <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <img src="assets/yt-dl.png" alt="ytdl" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. <a href="https://github.com/ma15fo43/Electron-YouTube-Downloader">Link to the GitHub repository</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
 
             <div class="project hvr-wobble-horizontal">
-                <h2 class="hvr-wobble-horizontal">More projects coming soon...</h2>
+                <h2 class="hvr-wobble-horizontal">Scratch userscript</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> I've planned a lot of projects to do during this summer so stay tuned... <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <img src="https://user-images.githubusercontent.com/37367577/74861390-8d357e80-534a-11ea-8f5f-dea44c76ff88.png" alt="scratch" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> Some time ago, I created a TamperMonkey userscript aiming to help Scratchers watching their profiles. <a href="https://github.com/ma15fo43/Improved-Scratch-Experience">Source code</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
         </div>
     </div>
