--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mazz • lounge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="output.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mazz' Lounge">
     <meta name="keywords" content="Mazz3015,ma15fo43,scratch,mazz,mazzml,mazz.ml,mazzfun,mazz.fun">
@@ -54,7 +54,7 @@
         <div class="container">
             <div data-aos="fade-up"><h1 style="font-size: 3em; margin-top: -60px;">About me</h1></div>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
-            <div data-aos="fade-down"><h2>I'm a french teenager who's passionated by IT. <br>I am, most likely, younger than you think I am. <br>I like programming a lot, and I already know HTML & CSS, JavaScript, Java and Python. <br>I've played Minecraft for more than 3 years, and I'm still learning a lot about this game. <br>In real life, I've played tennis since I'm 6 years-old and used to play piano. <br>I travel a lot, and I got the chance to visit Thaïland, China, Japan, and other nice countries or cities. <br><br>Scroll down to know me even better! ↓</h2></div>
+            <div data-aos="fade-down"><h2>I'm a french teenager who's passionated by IT. <br>I am, most likely, younger than you think I am. <br>I like programming a lot, and I already know HTML & CSS, JavaScript, Java and Python. I'm a verified Discord developer. <br>I've played Minecraft for more than 3 years, and I'm still learning a lot about this game. <br>In real life, I've played tennis since I'm 6 years-old and used to play piano. <br>I travel a lot, and I got the chance to visit Thaïland, China, Japan, and other nice countries or cities. <br><br>Scroll down to know me even better! ↓</h2></div>
         </div>
     </div>
 
@@ -79,8 +79,8 @@
             <div class="project hvr-wobble-horizontal">
                 <h2 class="hvr-wobble-horizontal">Mango</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
-                <img src="https://i.imgur.com/HLKYTSO.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <img src="assets/mango.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete and verified Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
