--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="container">
             <h1 style="font-size: 3em; margin-top: -60px;">Contact</h1>
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
-            <h2>You can click on the following icons to contact me. Feel free to say hello, <span style="text-decoration: line-through;">I'll reply with a cute cat gif</span></h2>
+            <h2>You can click on the following icons to contact me. Feel free to say hello+</h2>
             <br>
             <a href="https://twitter.com/mazzlmao"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
             <a href="https://www.youtube.com/channel/UC3juzayWb3AHs4Kt1YGd5Iw?"><i class="icons fab fa-youtube" style="color: red;"></i></a>&emsp;
