--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mazz' Lounge">
-    <meta name="keywords" content="Mazz3015,ma15fo43,scratch,mazz,mazzml,mazz.ml,mazzfun,mazz.fun">
+    <meta name="keywords" content="Mazz3015,ignmazz,scratch,mazz,mazzml,mazz.ml,mazzfun,mazz.fun">
     <meta name="author" content="Mazz">
     <meta name="theme-color" content="#FF5733">
     <meta property="og:title" content="Mazz website" />
-    <meta property="og:url" content="https://ma15fo43.github.io" />
+    <meta property="og:url" content="https://ignmazz.github.io" />
     <meta property="og:image"
         content="https://avatars2.githubusercontent.com/u/37367577?s=460&u=56b3f0d26c3f93c562a272bd14932bcc3d4e3990&v=4" />
     <meta property="og:description"
-        content="Learn more about Mazz/ma15fo43 in this new website, entirely redesigned." />
+        content="Learn more about Mazz/ignmazz in this new website, entirely redesigned." />
     <meta property="og:site_name" content="Mazz' lounge" />
     <meta property="og:type" content="website" />
     <script src="https://kit.fontawesome.com/7e66d43f44.js" crossorigin="anonymous"></script>
@@ -66,7 +66,7 @@
             <h2><span class="languages">HTML & CSS</span> &nbsp; - &nbsp; <span style="color: green">Experienced</span> <br><span class="languages">JavaScript</span> &nbsp; - &nbsp; <span style="color: green">Experienced</span> <br> <span class="languages">Java</span> &nbsp; - &nbsp; <span style="color: green">Experienced</span> <br><span class="languages">Python</span> &nbsp; - &nbsp; <span style="color: darkorange">Intermediare</span> <br><span class="languages">PHP</span> &nbsp; - &nbsp; <span style="color: red">Beginner</span> <br><span class="languages">C, C#, C++</span> &nbsp; - &nbsp; <span style="color: red">Beginner</span></h2> 
             <br><h2>But I also know some frameworks/tools such as..</h2>
             <h2><span class="languages">• Linux <br>• Node.JS (e.g. Electron or discord.js) <br>• Git</span></h2>
-            <br><h2>I have a <a href="https://github.com/Ma15fo43">GitHub</a> account where I share code or gists. Might interest you!</h2></div>
+            <br><h2>I have a <a href="https://github.com/ignmazz">GitHub</a> account where I share code or gists. Might interest you!</h2></div>
         </div>
     </div>
 
@@ -80,7 +80,7 @@
                 <h2 class="hvr-wobble-horizontal">Mango</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="assets/mango.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/Ma15fo43/Mango">Mango</a> is a complete and verified Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/ignmazz/Mango">Mango</a> is a complete and verified Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
@@ -89,7 +89,7 @@
                 <h2 class="hvr-wobble-horizontal">YouTube videos downloader</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="assets/yt-dl.png" alt="ytdl" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. <a href="https://github.com/ma15fo43/Electron-YouTube-Downloader">Link to the GitHub repository</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. <a href="https://github.com/ignmazz/Electron-YouTube-Downloader">Link to the GitHub repository</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
@@ -98,7 +98,7 @@
                 <h2 class="hvr-wobble-horizontal">Scratch userscript</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="https://user-images.githubusercontent.com/37367577/74861390-8d357e80-534a-11ea-8f5f-dea44c76ff88.png" alt="scratch" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> Some time ago, I created a TamperMonkey userscript aiming to help Scratchers watching their profiles. <a href="https://github.com/ma15fo43/Improved-Scratch-Experience">Source code</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> Some time ago, I created a TamperMonkey userscript aiming to help Scratchers watching their profiles. <a href="https://github.com/ignmazz/Improved-Scratch-Experience">Source code</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
         </div>
     </div>
@@ -111,9 +111,9 @@
             <br>
             <a href="https://twitter.com/mazzlmao"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
             <a href="https://www.youtube.com/channel/UC3juzayWb3AHs4Kt1YGd5Iw?"><i class="icons fab fa-youtube" style="color: red;"></i></a>&emsp;
-            <a href="https://github.com/ma15fo43"><i class="icons fab fa-github" style="color: black;"></i></a> &emsp;
+            <a href="https://github.com/ignmazz"><i class="icons fab fa-github" style="color: black;"></i></a> &emsp;
             <a href="https://reddit.com/user/mazz3015"><i class="icons fab fa-reddit" style="color: #FF4500;"></i></a> &emsp;
-            <a href="mailto:ma15fo43@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
+            <a href="mailto:ignmazz@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
         </div>
     </div>
 
