--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             <div class="list-divider" style="background: darkred; margin-top: -30px;"></div>
             <h2>You can click on the following icons to contact me. Feel free to say hello!</h2>
             <br>
-            <a href="https://twitter.com/mazzlmao"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
+            <a href="https://twitter.com/mazzdevs"><i class="icons fab fa-twitter" style="color: #1DA1F2;"></i></a> &emsp;
             <a href="https://www.youtube.com/channel/UC3juzayWb3AHs4Kt1YGd5Iw?"><i class="icons fab fa-youtube" style="color: red;"></i></a>&emsp;
-            <a href="https://github.com/ignmazz"><i class="icons fab fa-github" style="color: black;"></i></a> &emsp;
+            <a href="https://github.com/mazzlabs"><i class="icons fab fa-github" style="color: black;"></i></a> &emsp;
             <a href="https://reddit.com/user/mazz3015"><i class="icons fab fa-reddit" style="color: #FF4500;"></i></a> &emsp;
-            <a href="mailto:ignmazz@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
+            <a href="mailto:ma15fo43@gmail.com"><i class="icons fas fa-envelope-open-text" style="color: black;"></i></a> &emsp;
         </div>
     </div>
 
