✏ Added a section, updated links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h2 class="hvr-wobble-horizontal">Mango</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="assets/mango.png" alt="mango" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/ignmazz/Mango">Mango</a> is a complete and verified Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> <a href="https://github.com/mazzlabs/Mango">Mango</a> is a complete and verified Discord bot that can help you in your server every day: with more than 50 commands, it has moderation, fun, games, music and information commands. Play tic-tac-toe, consult weather or COVID-19 stats while listening to some music, with Mango, the all-in-one bot. <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
@@ -89,7 +89,7 @@
                 <h2 class="hvr-wobble-horizontal">YouTube videos downloader</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="assets/yt-dl.png" alt="ytdl" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. <a href="https://github.com/ignmazz/Electron-YouTube-Downloader">Link to the GitHub repository</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> A simple YouTube videos downloader, made with Electron. <a href="https://github.com/mazzlabs/Electron-YouTube-Downloader">Link to the GitHub repository</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
 
             <br>
@@ -98,7 +98,14 @@
                 <h2 class="hvr-wobble-horizontal">Scratch userscript</h2>
                 <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
                 <img src="https://user-images.githubusercontent.com/37367577/74861390-8d357e80-534a-11ea-8f5f-dea44c76ff88.png" alt="scratch" style="width: 50%; margin-top: 20px; border-radius: 25px;">
-                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> Some time ago, I created a TamperMonkey userscript aiming to help Scratchers watching their profiles. <a href="https://github.com/ignmazz/Improved-Scratch-Experience">Source code</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> Some time ago, I created a TamperMonkey userscript aiming to help Scratchers watching their profiles. <a href="https://github.com/mazzlabs/scratch.user.js">Source code</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
+            </div>
+
+            <div class="project hvr-wobble-horizontal">
+                <h2 class="hvr-wobble-horizontal">ScratchLib</h2>
+                <div class="list-divider" style="background: darkgrey; margin-top: -20px; width: 300px;"></div>
+                <img src="https://user-images.githubusercontent.com/37367577/96717883-7e0a4300-13a7-11eb-896a-3cc9fc81f266.png" alt="scratchlib" style="width: 50%; margin-top: 20px; border-radius: 25px;">
+                <h4 style="padding: 0 20px;"><i class="fas fa-quote-left" style="color: darkred;"></i> ScratchLib is a powerful library to interact with the Scratch API. <a href="https://github.com/mazzlabs/scratchlib">Source code of the module.</a> <i class="fas fa-quote-right" style="color: darkred;"></i></h4>
             </div>
         </div>
     </div>
