✏️ last minute edits

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" type="image/png" href="assets/logo.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mazz' portfolio">
     <meta name="keywords" content="Mazz3015,ignmazz,scratch,mazz,mazzml,mazz.ml,mazzfun,mazz.fun">
     <meta name="author" content="Mazz">
-    <meta name="theme-color" content="#FF5733">
-    <meta property="og:title" content="Mazz website" />
+    <meta name="theme-color" content="#565656">
+    <meta property="og:title" content="mazz.fun" />
     <meta property="og:url" content="https://mazzlabs.github.io" />
     <meta property="og:image"
         content="https://avatars2.githubusercontent.com/u/37367577?s=460&u=56b3f0d26c3f93c562a272bd14932bcc3d4e3990&v=4" />
-    <meta property="og:description" content="Learn more about Mazz/ignmazz in this new website, entirely redesigned." />
+    <meta property="og:description" content="Learn more about Mazz in this new portfolio, entirely redesigned." />
     <meta property="og:site_name" content="Mazz' portfolio" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet"
         id="font-awesome-5-kit-css">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all"
