--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <div class="slideone">
-        <header class="header" style="height: 100vh;">
+        <header class="header">
             <h2>Hi. Mazz there.</h2>
             <br>
             <h3>You're currently visiting my portfolio.
@@ -184,7 +184,7 @@
         <a href="https://github.com/mazzlabs/discord.ts">
             <div class="bordertwo">
                 <h1>discord.ts</h1>
-                <h3 style="font-weight: 400;">A template repository for discord.js TypeScript developers. It
+                <h3>A template repository for discord.js TypeScript developers. It
                     provides
                     all
                     the default and config files you'll ever need, and even some super cool commands! Click on
@@ -200,7 +200,7 @@
         <a href="https://github.com/mazzlabs/scratchlib">
             <div class="borderone" style="clear: both;">
                 <h1>ScratchLib</h1>
-                <h3 style="font-weight: 400;">A powerful library to interact with the Scratch API. It provides
+                <h3>A powerful library to interact with the Scratch API. It provides
                     many
                     methods
                     and properties you never heard of, and does requests for you. Install the node module and
@@ -215,7 +215,7 @@
         <a href="https://github.com/mazzlabs/scratch.user.js">
             <div class="bordertwo">
                 <h1>scratch.js</h1>
-                <h3 style="font-weight: 400;">A useful userscript made for the scratch website which displays
+                <h3>A useful userscript made for the scratch website which displays
                     the
                     Scratcher
                     ID on his profile, shows the number of followers and number of persons he's following and
@@ -223,7 +223,7 @@
                     back
                     the
                     forum button on the navbar.</h3>
-                <br><span class="language""><i class="fas fa-code"></i>&nbsp;
+                <br><span class="language""><i class=" fas fa-code"></i>&nbsp;
                     JavaScript</span>
             </div>
         </a>
@@ -239,7 +239,6 @@
             &emsp;
             <a href="mailto:ma15fo43@gmail.com"><i class="icons fas fa-envelope-open-text"
                     style="color: white;"></i></a>
-            &emsp;
         </div>
     </section>
 
